# healthypdf

./: .gitignore  .master.ps1  .master.sh  AltPDF.spec  AltPDF_RPM.spec  actions_handler.py  altpdf.spec  drawing_overlay.py  encryption_print_handler.py  help.docx  integrated_main_window.py  integrated_pdf_viewer.py  interface.txt  main_entry.py  main_window.py  pages_widget.py  pdf_viewer.deleted.py  pdf_viewer.py  pyproject.toml  qcolordialog_ru.qm  qcolordialog_ru.ts  requirements.txt  resources.py  resources.qrc  resources_stub.py  settings_manager.py  thumbnail_widget.py  ui_localization.py  updated_ui_main_window.py
.scripts/linux/: activate-build.sh  activate-dev.sh  build.sh  download-build-wheels.sh  scripts-chmod.sh  setup-build.sh  setup-dev.sh
.scripts/windows/: activate-build.ps1  activate-dev.ps1  build.ps1  download-build-wheels.ps1  setup-build.ps1  setup-dev.ps1
classes/: cache.py  document.py  drawing_overlay.py  email_sender.py  file_inserting.py  mapPage.py  page_widget.py  page_widget_stack.py  pages_range_dialog.py  printing.py  rendering.py  vector_manager.py
old/: integrated_main_window.py  integrated_pdf_viewer.py  main_integrated.py  page_operation_dialog.py  readme_file.md  resources.py  resources.qrc  updated_ui_main_window.py  zoom_selector.py  zoom_selector2.py
